// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PipingMenu should filter out checkbox answer types 1`] = `
Object {
  "sections": Array [
    Object {
      "id": "1",
      "pages": Array [
        Object {
          "answers": Array [
            Object {
              "id": "2",
              "label": "Answer 2",
              "type": "TextField",
            },
          ],
          "id": "1",
        },
      ],
    },
  ],
}
`;

exports[`PipingMenu should filter out radio answer types 1`] = `
Object {
  "sections": Array [
    Object {
      "id": "1",
      "pages": Array [
        Object {
          "answers": Array [
            Object {
              "id": "2",
              "label": "Answer 2",
              "type": "TextField",
            },
          ],
          "id": "1",
        },
      ],
    },
  ],
}
`;

exports[`PipingMenu should only allow selection of answers before the current page 1`] = `
Object {
  "sections": Array [
    Object {
      "id": "1",
      "pages": Array [
        Object {
          "answers": Array [
            Object {
              "id": "1",
              "label": "Answer 1",
              "type": "TextField",
            },
            Object {
              "id": "2",
              "label": "Answer 2",
              "type": "TextField",
            },
          ],
          "id": "1",
        },
        Object {
          "answers": Array [
            Object {
              "id": "3",
              "label": "Answer 3",
              "type": "TextField",
            },
          ],
          "id": "2",
        },
      ],
    },
    Object {
      "id": "2",
      "pages": Array [
        Object {
          "answers": Array [
            Object {
              "id": "4",
              "label": "Answer 4",
              "type": "TextField",
            },
            Object {
              "id": "5",
              "label": "Answer 5",
              "type": "TextField",
            },
          ],
          "id": "3",
        },
      ],
    },
  ],
}
`;

exports[`PipingMenu should render 1`] = `
<IconButton__Button
  disabled={false}
  icon="icon-piping.svg"
  menu={
    <QuestionnaireMenu
      client={
        Object {
          "query": [Function],
          "readQuery": [Function],
        }
      }
      match={
        Object {
          "params": Object {
            "pageId": "2",
            "questionnaireId": "1",
            "sectionId": "1",
          },
        }
      }
      menuZIndex={10}
      onItemChosen={[Function]}
      questionnaire={
        Object {
          "sections": Array [
            Object {
              "id": "1",
              "pages": Array [
                Object {
                  "answers": Array [
                    Object {
                      "id": "1",
                      "label": "Answer 1",
                      "type": "TextField",
                    },
                    Object {
                      "id": "2",
                      "label": "Answer 2",
                      "type": "TextField",
                    },
                  ],
                  "id": "1",
                },
              ],
            },
          ],
        }
      }
    />
  }
  menuZIndex={10}
/>
`;

exports[`PipingMenu shouldn't show current section if on first page of section 1`] = `
Object {
  "sections": Array [
    Object {
      "id": "1",
      "pages": Array [
        Object {
          "answers": Array [
            Object {
              "id": "1",
              "label": "Answer 1",
              "type": "TextField",
            },
            Object {
              "id": "2",
              "label": "Answer 2",
              "type": "TextField",
            },
          ],
          "id": "1",
        },
        Object {
          "answers": Array [
            Object {
              "id": "3",
              "label": "Answer 3",
              "type": "TextField",
            },
          ],
          "id": "2",
        },
      ],
    },
  ],
}
`;
